# gb-menu

./: LICENSE  README.md  og_menu.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
examples/: multiple_columns.py  return_values.py  sub_menu.py  textboxes.py  up_down.py
gb_menu/: __init__.py  action.py  choice.py  menu.py  style.py  textbox.py
tests/: __init__.py  test_up_down.py
