[metadata]
name = gb-menu
version = 1.0.0
url = https://github.com/gbeard2/gb-menu
author = Garrett Beard
author_email = beardgarrett077@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A lightweight Python library useful for creating powerful yet simple console-based user interfaces
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6